Fix back to flavors btn squishing

--- a/src/css/Card.scss
+++ b/src/css/Card.scss
@@ -3,13 +3,11 @@
 .ice-cream-card {
     display: flex;
     height: 290px;
-    width: 320px;
     justify-content: center;
     align-items: center;
-    margin: 25px;
+    margin: 0px 25px;
     flex-direction: column;
     padding: 35px;
-    font-size: 12px;
     background: url(/images/cup.png);
     background-size: 393px;
     background-repeat: no-repeat;
@@ -20,14 +18,15 @@
     }
     .ice-cream-name {
         font-size: 20px;
-        margin-bottom: 30px;
-        margin-top: 29px;
+        margin: 30px;
+        text-align: center;
+        line-height: 20px;
     }
 }
 
 .parlor-popup {
     align-items: center;
-    background-color: $pink-primary-color;
+    background-color: #ffc8c8;
     border: 3px solid black;
     bottom: 0;
     display: flex;
@@ -40,11 +39,13 @@
     position: fixed;
     right: 0;
     top: 0;
-    // white-space: nowrap;
-    width: 75%;
+    width: 71%;
     z-index: 2;
+    border-radius: 15px;
+
     .icecream-description {
-        margin-top: -10px;
+        margin: -10px 0;
+        text-align: center;
     }
     .big-ice-cream-name {
         margin-left: 25px;
@@ -58,6 +59,7 @@
     height: 110px;
     width: 110px;
 }
+
 
 
 
