--- a/src/css/CardContainer.scss
+++ b/src/css/CardContainer.scss
@@ -3,6 +3,7 @@
 .card-container {
   background-color: $light-blue;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; 
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 20px 0px;
   }
 
