--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -34,7 +34,7 @@ button {
     font-size: 14px;
     margin-left: 5px;
     margin-top: 7px;
-    padding: 4.5px;
+    padding: 4.5px 10px;
 }
 
 button {
