--- a/src/css/ParlorDetail.scss
+++ b/src/css/ParlorDetail.scss
@@ -37,9 +37,8 @@
     }
     button {
       height: 30px;
-      margin-bottom: 40px;
       padding-bottom: 30px;
-      width: 140px;
+      width: 150px;
   }
   .bold {
     font-weight: 600;
